# music-recomend-sys

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  test.py
src/: logs.py  settings.py
src/base/: base_dao.py
src/core/audio_processing/: __init__.py  domains.py  processor.py  service.py  services.py
src/core/recomendations/: ports.py
src/core/recommendation/: ports.py  services.py
src/core/tracks/: domains.py  models.py  ports.py  services.py  types.py
src/driven/database/: session.py
src/driven/database/tracks/: dao.py  models.py
src/driven/filesystem/: tracks_storage.py
src/driven/recommendation/: annoy_adapter.py
src/driver/rest/: app.py
src/driver/rest/api/: __init__.py
src/driver/rest/api/v1/: __init__.py  tracks.py
src/driver/rest/depends/: audio_processing.py  recommendation.py  tracks.py
src/driver/rest/dto/: tracks.py
src/generics/: read_result.py
src/ingest/: async_saver.py  dto.py  hasher.py  metadata.py  pipeline.py  worker.py
src/utils/conv/: from_domain_to_model.py
